--- a/index.qmd
+++ b/index.qmd
@@ -24,9 +24,9 @@ about:
 
 I am a student at State University of New York at Geneseo.
 
-I am interested in ...
+I am interested in running
 
-I enjoy ...
+I enjoy cooking, Netflix, and football
 
 
 ## Education
