--- a/index.qmd
+++ b/index.qmd
@@ -15,13 +15,16 @@ about:
       href: mailto:nsa5@geneseo.edu
     - text: Résumé
       icon: file-pd
-      href: file:///C:/Users/nicka/OneDrive/Desktop/Job%20and%20Internship/Nicholas%20Andrews%20Resume.pdf
+      href: https://nickya5.github.io/Nicholas Andrews Resume.pdf
 ---
 
 
-I am a student at State University of New York at Geneseo. As an Economics major I am interested in research. My favorite research sectors are the economics of policy development and the economics of sports. Although these two sectors interest me the most, any research that may cause actual change interests me.
-Outside of economics I am a college runner at the D3 level. I have seem great success through my ability to put forth a high amount of work ethic, time management, and communication skills with teammates. 
-
+I am a student at State University of New York at Geneseo. As an Economics major I am interested in research. My favorite research sectors are the economics of policy development, health care economics, and the economics of sports. Although these two sectors interest me the most, the research process as a whole interests me.<br>
+Outside of economics I am a college runner at the D3 level. I have seem great success through my ability to put forth a high amount of work ethic, time management, and communication skills with teammates. These intangible skills can be seen in my results;<br>
+6 time All American <br>
+3 time Academic All American<br>
+Leader of a team that won every XC/TF conference championship<br>
+Led 2 teams to national podium places<br>
 
 ## Education
 
